--- a/app/src/main/res/drawable/outline_pause_24.xml
+++ b/app/src/main/res/drawable/outline_pause_24.xml
@@ -1,9 +1,8 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
+    android:width="50dp"
+    android:height="50dp"
+    android:viewportWidth="25"
+    android:viewportHeight="25">
   <path
       android:fillColor="@android:color/white"
       android:pathData="M6,19h4L10,5L6,5v14zM14,5v14h4L18,5h-4z"/>
