--- a/app/src/main/res/layout/activity_music_select.xml
+++ b/app/src/main/res/layout/activity_music_select.xml
@@ -47,8 +47,8 @@
 
                 <ImageView
                     android:id="@+id/imageView_select_back"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
