--- a/app/src/main/res/drawable/round_play_arrow_24.xml
+++ b/app/src/main/res/drawable/round_play_arrow_24.xml
@@ -6,5 +6,5 @@
     >
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M16,9v10H8V9h8m-1.5,-6h-5l-1,1H5v2h14V4h-3.5l-1,-1zM18,7H6v12c0,1.1 0.9,2 2,2h8c1.1,0 2,-0.9 2,-2V7z"/>
+      android:pathData="M8,6.82v10.36c0,0.79 0.87,1.27 1.54,0.84l8.14,-5.18c0.62,-0.39 0.62,-1.29 0,-1.69L9.54,5.98C8.87,5.55 8,6.03 8,6.82z"/>
 </vector>
