--- a/app/src/main/res/layout/musicdesign_item.xml
+++ b/app/src/main/res/layout/musicdesign_item.xml
@@ -36,7 +36,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/orange" />
+            app:srcCompat="@drawable/outline_air_24" />
 
         <TextView
             android:id="@+id/IconName"
