--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -154,7 +154,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
-                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Card.Media.6" />
+                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Card.Media.6top" />
 
             <TextView
                 android:id="@+id/musicDiaryTitle"
@@ -299,7 +299,7 @@
         layout="@layout/seekbar_content"
         android:layout_width="0dp"
         android:layout_height="100dp"
-
+        android:layout_marginBottom="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
