--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#1D283F</color>
     <color name="white">#FFFFFFFF</color>
     <color name="colorBackground">#E3E9F4</color>
+    <color name="colorAmbient">#CC819FED</color>
+    <color name="colorSpot">#CC2963FA</color>
 </resources>
