--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="ShapeAppearanceOverlay.App.Card.Media.6" parent="">
+    <style name="ShapeAppearanceOverlay.App.Card.Media.6top" parent="">
         <item name="cornerSizeBottomLeft">0dp</item>
         <item name="cornerSizeBottomRight">0dp</item>
         <item name="cornerSizeTopLeft">6dp</item>
         <item name="cornerSizeTopRight">6dp</item>
+    </style>
+
+    <style name="ShapeAppearanceOverlay.App.Card.Media.16" parent="">
+        <item name="cornerSizeBottomLeft">16dp</item>
+        <item name="cornerSizeBottomRight">16dp</item>
+        <item name="cornerSizeTopLeft">16dp</item>
+        <item name="cornerSizeTopRight">16dp</item>
+    </style>
+    <style name="ShapeAppearanceOverlay.App.Card.Media.circle" parent="">
+        <item name="cornerSize">50%</item>
     </style>
 </resources>
